
set(TEST_NDVEC test.ndvec)
add_executable(${TEST_NDVEC}   ${VERIFICATION_SOURCE_DIR}/test.ndvec.cpp)
target_link_libraries(${TEST_NDVEC} PUBLIC libctdr)
open_mp_enable(${TEST_NDVEC})
add_test(NAME ndvec.getl COMMAND ${TEST_NDVEC} getl)
set_tests_properties(ndvec.getl PROPERTIES LABELS unit_test)
add_test(NAME ndvec.addl COMMAND ${TEST_NDVEC} addl)
set_tests_properties(ndvec.addl PROPERTIES LABELS unit_test)
add_test(NAME ndvec.atomic COMMAND ${TEST_NDVEC} atomic)
set_tests_properties(ndvec.atomic PROPERTIES LABELS unit_test)
add_test(NAME ndvec.gradient COMMAND ${TEST_NDVEC} gradient)
set_tests_properties(ndvec.gradient PROPERTIES LABELS unit_test)
add_test(NAME ndvec.convolve COMMAND ${TEST_NDVEC} convolve)
set_tests_properties(ndvec.convolve PROPERTIES LABELS unit_test)
add_test(NAME ndvec.slice2tiff COMMAND ${TEST_NDVEC} slice2tiff)
set_tests_properties(ndvec.slice2tiff PROPERTIES LABELS unit_test)